--- a/backend/configs/config.yaml
+++ b/backend/configs/config.yaml
@@ -8,17 +8,25 @@ postgres: &POSTGRES
 redis: &REDIS
   addr: redis:6379
 
+kafka: &KAFKA
+  topic: "wander_sphere"
+  brokers: ["kafka:9092"]
+
 # Configuration for aap service connection
 authenticate_and_post_config: &AAP
   port: 19001
   postgres: *POSTGRES
   redis: *REDIS
+  kafka: *KAFKA
 
 # Configuration for nf service connection
 newsfeed_config: &NF
   port: 19002
   postgres: *POSTGRES
   redis: *REDIS
+  kafka: *KAFKA
+  authenticate_and_post:
+    hosts: ["aap:19001"]
 
 # Configurations for web app
 web_config:
