--- a/backend/configs/config.yaml
+++ b/backend/configs/config.yaml
@@ -17,12 +17,21 @@ authenticate_and_post_config: &AAP
   port: 19001
   postgres: *POSTGRES
   redis: *REDIS
-  kafka: *KAFKA
+  newsfeed_publishing:
+    hosts: ["nfp:19004"]
 
 # Configuration for nf service connection
 newsfeed_config: &NF
   port: 19002
   postgres: *POSTGRES
+  redis: *REDIS
+  kafka: *KAFKA
+  authenticate_and_post:
+    hosts: ["aap:19001"]
+
+# Configuration for nfp service connection
+newsfeed_publishing_config: &NFP
+  port: 19004
   redis: *REDIS
   kafka: *KAFKA
   authenticate_and_post:
