feat(docker): Update Docker Compose configuration to include newsfeed and newsfeed publishing services, modify authpost service image name, and adjust health checks. Update Makefile for consistent docker-compose command usage.

--- a/backend/configs/config.yaml
+++ b/backend/configs/config.yaml
@@ -44,4 +44,6 @@ web_config:
   api_version: ["v1"]
   authenticate_and_post:
     hosts: ["aap:19001"]
+  newsfeed:
+    hosts: ["nf:19002"]
   redis: *REDIS
