--- a/backend/configs/live.yaml
+++ b/backend/configs/live.yaml
@@ -7,18 +7,32 @@ postgres: &POSTGRES
   skipInitializeWithVersion: false
 redis: &REDIS
   addr: redis:6379
+kafka: &KAFKA
+  topic: "wander_sphere"
+  brokers: ["kafka:9092"]
 
 # Configuration for aap service connection
 authenticate_and_post_config: &AAP
   port: 19001
   postgres: *POSTGRES
   redis: *REDIS
+  newsfeed_publishing:
+    hosts: ["nfp:19004"]
 
 # Configuration for nf service connection
 newsfeed_config: &NF
   port: 19002
   postgres: *POSTGRES
   redis: *REDIS
+  kafka: *KAFKA
+
+# Configuration for nfp service connection
+newsfeed_publishing_config: &NFP
+  port: 19004
+  redis: *REDIS
+  kafka: *KAFKA
+  authenticate_and_post:
+    hosts: ["aap:19001"]
 
 # Configurations for web app
 web_config:
@@ -27,4 +41,6 @@ web_config:
   api_version: ["v1"]
   authenticate_and_post:
     hosts: ["aap:19001"]
+  newsfeed:
+    hosts: ["nf:19002"]
   redis: *REDIS
