--- a/backend/configs/live.yaml
+++ b/backend/configs/live.yaml
@@ -10,10 +10,13 @@ redis: &REDIS
 kafka: &KAFKA
   topic: "wander_sphere"
   brokers: ["kafka:9092"]
+logger: &LOGGER
+  level: "debug"
 
 # Configuration for aap service connection
 authenticate_and_post_config: &AAP
   port: 19001
+  logger: *LOGGER
   postgres: *POSTGRES
   redis: *REDIS
   newsfeed_publishing:
@@ -22,6 +25,7 @@ authenticate_and_post_config: &AAP
 # Configuration for nf service connection
 newsfeed_config: &NF
   port: 19002
+  logger: *LOGGER
   postgres: *POSTGRES
   redis: *REDIS
   kafka: *KAFKA
@@ -29,6 +33,7 @@ newsfeed_config: &NF
 # Configuration for nfp service connection
 newsfeed_publishing_config: &NFP
   port: 19004
+  logger: *LOGGER
   redis: *REDIS
   kafka: *KAFKA
   authenticate_and_post:
@@ -38,6 +43,7 @@ newsfeed_publishing_config: &NFP
 web_config:
   # Connection configs
   port: 19003
+  logger: *LOGGER
   api_version: ["v1"]
   authenticate_and_post:
     hosts: ["aap:19001"]
