--- a/backend/config.yaml
+++ b/backend/config.yaml
@@ -1,31 +1,67 @@
 # Common configurations for aap and nf
 postgres: &POSTGRES
-  dsn: "postgres:123456@tcp(postgres:5432)/wander_sphere?sslmode=disable"
+  dsn: "postgres:123456@tcp(localhost:5432)/wander_sphere?sslmode=disable"
   defaultStringSize: 256
   disableDatetimePrecision: true
   dontSupportRenameIndex: true
   skipInitializeWithVersion: false
 redis: &REDIS
-  addr: "localhost:6379"
-  password: "2511"
+  addr: localhost:6379
+
+kafka: &KAFKA
+  topic: "wander_sphere"
+  brokers: ["localhost:9092"]
+
+logger: &LOGGER
+  level: "debug"
+
+# Common auth configuration
+auth: &AUTH
+  session:
+    cookie_name: "wandersphere_session"
+    expiration_minutes: 1440  # 24 hours
+    secure: true
+    http_only: true
+    same_site: "strict"
 
 # Configuration for aap service connection
 authenticate_and_post_config: &AAP
   port: 19001
+  logger: *LOGGER
   postgres: *POSTGRES
   redis: *REDIS
+  newsfeed_publishing:
+    hosts: ["localhost:19004"]
+  auth: *AUTH
 
 # Configuration for nf service connection
 newsfeed_config: &NF
   port: 19002
+  logger: *LOGGER
   postgres: *POSTGRES
   redis: *REDIS
+  kafka: *KAFKA
+  authenticate_and_post:
+    hosts: ["localhost:19001"]
+
+# Configuration for nfp service connection
+newsfeed_publishing_config: &NFP
+  port: 19004
+  logger: *LOGGER
+  redis: *REDIS
+  kafka: *KAFKA
+  authenticate_and_post:
+    hosts: ["localhost:19001"]
 
 # Configurations for web app
 web_config:
   # Connection configs
   port: 19003
+  logger: *LOGGER
   api_version: ["v1"]
   authenticate_and_post:
     hosts: ["localhost:19001"]
+  newsfeed:
+    hosts: ["localhost:19002"]
   redis: *REDIS
+  auth: *AUTH
