--- a/backend/cmd/newsfeed/Dockerfile
+++ b/backend/cmd/newsfeed/Dockerfile
@@ -13,10 +13,10 @@ FROM alpine:latest AS test_env
 WORKDIR /app
 COPY --from=builder /app/newsfeed.linux .
 COPY --from=builder /app/configs /app/configs
-CMD ["/app/newsfeed.linux", "-conf", "configs/files/test.yml"]
+CMD ["/app/newsfeed.linux"]
 
 FROM alpine:latest AS live_env
 WORKDIR /app
 COPY --from=builder /app/newsfeed.linux .
 COPY --from=builder /app/configs /app/configs
-CMD ["/app/newsfeed.linux", "-conf", "configs/files/live.yml"]
+CMD ["/app/newsfeed.linux"]
