feat(admin): Introduce System Administration Tool for enhanced management, add Redis and Kafka utilities, and implement comprehensive testing framework

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,21 @@ personal/
 
 # Ignore compiled binaries
 *.linux
+
+# Build output directories
+bin/
+build/
+
+# Test artifacts
+tests/cookies.txt
+tests/test_results.json
+tests/coverage/
+
+# Temporary files
+*.tmp
+tmp/
+temp/
+
+# IDE files
+.vscode/
+.idea/
