--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,13 +10,13 @@ services:
     depends_on:
       - newsfeed
       - aap
+      - minio
     networks:
       - intranet
       - default
     hostname: web
     ports:
       - 19003:19003
-      - 19103:19103
     volumes:
       - ./config.yaml:/app/config.yaml
     profiles: [ "web", "all" ]
@@ -155,9 +155,31 @@ services:
       test: [ "CMD", "redis-cli", "ping" ]
     profiles: [ "infra", "all" ]
 
+  minio:
+    image: minio/minio:latest
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    networks:
+      - intranet
+    hostname: minio
+    ports:
+      - 9000:9000
+      - 9001:9001
+    volumes:
+      - minio_data:/data
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    profiles: [ "infra", "all" ]
+
 networks:
   intranet: {}
   default: {}
 
 volumes:
   postgres_data:
+  minio_data:
